- swipe method was modified.